samples/_failures_safe/1761292338_ccee0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a894a2e5.c: In function ‘main’:
./samples/SAFE/__tmp_a894a2e5.c:140:5: error: expected declaration or statement at end of input
  140 |     size_t compressed_size = compress_data(&params, input_buffer, input_len, output_buffer, sizeof(output_buffer));
      |     ^~~~~~
